--- a/pig-mn-common/pom.xml
+++ b/pig-mn-common/pom.xml
@@ -23,4 +23,14 @@
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-release-plugin</artifactId>
+            </plugin>
+
+        </plugins>
+    </build>
+
 </project>
