--- a/pom.xml
+++ b/pom.xml
@@ -156,9 +156,9 @@
                    <artifactId>maven-release-plugin</artifactId>
                    <version>3.0.0-M1</version>
                    <configuration>
-                       <tagNameFormat>@{project.version}</tagNameFormat>
-                       <releaseVersion>@{project.version}</releaseVersion>
-                       <developmentVersion>@{project.version}-SNAPSHOT</developmentVersion>
+                       <tagNameFormat>${project.version}</tagNameFormat>
+                       <releaseVersion>${project.version}</releaseVersion>
+                       <developmentVersion>${project.version}-SNAPSHOT</developmentVersion>
                    </configuration>
                </plugin>
            </plugins>
@@ -167,6 +167,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-release-plugin</artifactId>
+                <configuration>
+                    <tagNameFormat>${project.version}</tagNameFormat>
+                    <releaseVersion>${project.version}</releaseVersion>
+                    <developmentVersion>${project.version}-SNAPSHOT</developmentVersion>
+                </configuration>
             </plugin>
         </plugins>
     </build>
