--- a/pig-mn-common/pig-mn-common-core/pom.xml
+++ b/pig-mn-common/pig-mn-common-core/pom.xml
@@ -39,6 +39,10 @@
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.xuxueli</groupId>
+            <artifactId>xxl-job-core</artifactId>
+        </dependency>
     </dependencies>
 
 </project>
