--- a/pig-mn-common/pig-mn-common-bom/pom.xml
+++ b/pig-mn-common/pig-mn-common-bom/pom.xml
@@ -72,6 +72,11 @@
                 <artifactId>xxl-job-core</artifactId>
                 <version>2.4.1</version>
             </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson-spring-boot-starter</artifactId>
+                <version>3.15.3</version> <!-- 请使用最新的稳定版本 -->
+            </dependency>
         </dependencies>
     </dependencyManagement>
     <distributionManagement>
