--- a/redisson-server/redisson-server-biz/src/main/resources/bootstrap.yml
+++ b/redisson-server/redisson-server-biz/src/main/resources/bootstrap.yml
@@ -24,8 +24,9 @@ mybatis-plus:
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
   global-config:  #逻辑删除配置
     db-config:
-      logic-delete-value: 1 # 逻辑已删除值(默认为 1)
-      logic-not-delete-value: 0 # 逻辑未删除值(默认为 0)
+      logic-delete-field: isDelete # 全局逻辑删除字段名，默认为"deleted"
+      logic-delete-value: 1        # 逻辑已删除值，默认为1
+      logic-not-delete-value: 0    # 逻辑未删除值，默认为0
     refresh-mapper: true # 刷新mapper 调试神器
   type-aliases-package: com.yf.entity
 #redisson:
